Add primary key description

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "source": [
-    "## Cassandra database Model for Analyzing Songs And User Listening Activities"
+    "## Design Cassandra database for Analyzing Songs And User Listening Activities"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -98,7 +98,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/Users/ai.tran/src/data-engineering/data-modeling/etl-pipeline/data/processed_events/event_datafile_new.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# specify the name of the file in which the extracted data is stored\n",
     "processed_events_file = os.getcwd() + '/data/processed_events/event_datafile_new.csv'\n",
@@ -136,7 +144,9 @@
     "    for row in full_data_rows_list:\n",
     "        if (row[0] == ''):\n",
     "            continue\n",
-    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7], row[8], row[12], row[13], row[16]))\n"
+    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7], row[8], row[12], row[13], row[16]))\n",
+    "\n",
+    "print(processed_events_file)"
    ]
   },
   {
@@ -430,6 +440,7 @@
     "table_1 = \"song_history_by_session\"\n",
     "\n",
     "## create a table for storing data\n",
+    "## create primary key from columns that are used for querying: sessionId and itemInSession.\n",
     "create_table(session, \n",
     "    table_name=table_1, \n",
     "    table_columns=[('sessionId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('length','float')], \n",
@@ -476,6 +487,9 @@
     "## Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
     "table_2 = \"song_history_by_user_session\"\n",
+    "\n",
+    "## create primary key from columns that are used for querying: sessionId and userId.  Add itemInSession to the composite\n",
+    "## primary key as clustering column for sorting the result.\n",
     "create_table(session, \n",
     "    table_name=table_2, \n",
     "    table_columns=[('sessionId','int'), ('userId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('firstName','text'), ('lastName','text')], \n",
@@ -519,6 +533,9 @@
    "source": [
     "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "table_3 = \"song_listened_by_users\"\n",
+    "\n",
+    "## create primary key from column that is used for querying: song.  Add userId to make the composite\n",
+    "## primary key as clustering column to achieve uniqueness.\n",
     "create_table(session, \n",
     "    table_name=table_3, \n",
     "    table_columns=[('song','text'), ('userId','int'), ('firstName','text'), ('lastName','text')], \n",
