Use pandas dataframe as row factory

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -247,6 +247,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def pandas_factory(colnames, rows):\n",
+    "    \"\"\" Define pandas dataframe as the row factory for cassandra session \"\"\"\n",
+    "    return pd.DataFrame(rows, columns=colnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# This should make a connection to a Cassandra instance your local machine \n",
     "# (127.0.0.1)\n",
     "try:\n",
@@ -255,6 +266,8 @@
     "\n",
     "    # To establish connection and begin executing queries, need a session\n",
     "    session = cluster.connect()\n",
+    "    session.row_factory = pandas_factory\n",
+    "    session.default_fetch_size = None\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
@@ -268,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +375,6 @@
     "\n",
     "    insert_stmt = f\"INSERT INTO {table_name} ({', '.join(table_columns)}) VALUES ({'%s, '*(len(table_columns)-1)}%s)\"\n",
     "    try:\n",
-    "        #df = pd.read_csv(datafile, header=0)\n",
     "        [session.execute(insert_stmt, tuple(row)) for row in df[table_columns].to_numpy()]\n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -376,10 +388,10 @@
     "        return\n",
     "\n",
     "    try:\n",
-    "        rows = session.execute(query)\n",
+    "        result = session.execute(query, timeout=None)\n",
+    "        dataframe = result._current_rows\n",
     "        print(f\"===== Query: =======\\n{query}\\n\")\n",
-    "        print( \"===== Results: =====\")\n",
-    "        [print(row) for row in rows]\n",
+    "        return dataframe\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "    \n",
@@ -413,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -428,9 +440,7 @@
       "    SELECT artist, song, length\n",
       "    FROM song_history_by_session\n",
       "    WHERE sessionId=338 AND itemInSession=4\n",
-      "\n",
-      "===== Results: =====\n",
-      "Row(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
+      "\n"
      ]
     }
    ],
@@ -455,12 +465,34 @@
     "    SELECT artist, song, length\n",
     "    FROM {table_1}\n",
     "    WHERE sessionId=338 AND itemInSession=4\"\"\"\n",
-    "fetch(session, query)"
+    "df1 = fetch(session, query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      artist                             song      length\n",
+       "0  Faithless  Music Matters (Mark Knight Dub)  495.307312"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>song</th>\n      <th>length</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Faithless</td>\n      <td>Music Matters (Mark Knight Dub)</td>\n      <td>495.307312</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -474,12 +506,7 @@
       "    FROM song_history_by_user_session\n",
       "    WHERE userId=10 AND sessionId=182 \n",
       "    ORDER BY itemInSession\n",
-      "\n",
-      "===== Results: =====\n",
-      "Row(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Lonnie Gordon', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)', firstname='Sylvie', lastname='Cruz')\n"
+      "\n"
      ]
     }
    ],
@@ -504,12 +531,43 @@
     "    FROM {table_2}\n",
     "    WHERE userId=10 AND sessionId=182 \n",
     "    ORDER BY itemInSession\"\"\"\n",
-    "fetch(session, query)"
+    "df2 = fetch(session, query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "              artist                                               song  \\\n",
+       "0   Down To The Bone                                 Keep On Keepin' On   \n",
+       "1       Three Drives                                        Greece 2000   \n",
+       "2  Sebastien Tellier                                          Kilometer   \n",
+       "3      Lonnie Gordon  Catch You Baby (Steve Pitron & Max Sanna Radio...   \n",
+       "\n",
+       "  firstname lastname  \n",
+       "0    Sylvie     Cruz  \n",
+       "1    Sylvie     Cruz  \n",
+       "2    Sylvie     Cruz  \n",
+       "3    Sylvie     Cruz  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>song</th>\n      <th>firstname</th>\n      <th>lastname</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Down To The Bone</td>\n      <td>Keep On Keepin' On</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Three Drives</td>\n      <td>Greece 2000</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Sebastien Tellier</td>\n      <td>Kilometer</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Lonnie Gordon</td>\n      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio...</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -522,11 +580,7 @@
       "    SELECT firstName, lastName \n",
       "    FROM song_listened_by_users \n",
       "    WHERE song='All Hands Against His Own'\n",
-      "\n",
-      "===== Results: =====\n",
-      "Row(firstname='Jacqueline', lastname='Lynch')\n",
-      "Row(firstname='Tegan', lastname='Levine')\n",
-      "Row(firstname='Sara', lastname='Johnson')\n"
+      "\n"
      ]
     }
    ],
@@ -549,7 +603,31 @@
     "    SELECT firstName, lastName \n",
     "    FROM {table_3} \n",
     "    WHERE song='All Hands Against His Own'\"\"\"\n",
-    "fetch(session, query)               "
+    "df3 = fetch(session, query)               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "    firstname lastname\n",
+       "0  Jacqueline    Lynch\n",
+       "1       Tegan   Levine\n",
+       "2        Sara  Johnson"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>firstname</th>\n      <th>lastname</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Jacqueline</td>\n      <td>Lynch</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Tegan</td>\n      <td>Levine</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Sara</td>\n      <td>Johnson</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "df3"
    ]
   },
   {
@@ -561,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,13 +657,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
+  },
+  {
+   "source": [
+    "TODO:\n",
+    "performance improvement"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
