Update documentation on primary keys

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -236,8 +236,8 @@
   },
   {
    "source": [
-    "#### Define functions for creating table, populating table with datasource, run query and return results as panda dataframe,\n",
-    "#### and dropping table"
+    "#### Define functions for creating table, populating table with datasource, run query and return results as panda dataframe, and dropping table.\n",
+    "The pandas factory is defined to be used as the row factory for the session"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -323,15 +323,9 @@
     "    try:\n",
     "        session.execute(drop_stmt)\n",
     "    except Exception as e:\n",
-    "        print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        print(e)\n",
+    "\n",
+    "\n",
     "def pandas_factory(colnames, rows):\n",
     "    \"\"\" Define pandas dataframe as the row factory for cassandra session \"\"\"\n",
     "    return pd.DataFrame(rows, columns=colnames)"
@@ -346,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,20 +415,14 @@
    "source": [
     "### Create queries to ask the following three questions of the data\n",
     "\n",
-    "#### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "#### Query 1: Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
-    "\n",
-    "#### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "#### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "The primary key is a composite key comprised of columns that are used for querying: sessionId and itemInSession.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -462,16 +450,13 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>song</th>\n      <th>length</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Faithless</td>\n      <td>Music Matters (Mark Knight Dub)</td>\n      <td>495.307312</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 10
     }
    ],
    "source": [
-    "## Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
     "table_1 = \"song_history_by_session\"\n",
     "\n",
     "## create a table for storing data\n",
-    "## create primary key from columns that are used for querying: sessionId and itemInSession.\n",
     "create_table(session, \n",
     "    table_name=table_1, \n",
     "    table_columns=[('sessionId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('length','float')], \n",
@@ -491,8 +476,19 @@
    ]
   },
   {
+   "source": [
+    "#### Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "The primary key of this table is a composite key including `userId`, `sessionId`, and the clustering key `itemInSession`. \n",
+    "\n",
+    "`itemInSession` is added as clustering column for sorting the resultset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,16 +524,12 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>song</th>\n      <th>firstname</th>\n      <th>lastname</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Down To The Bone</td>\n      <td>Keep On Keepin' On</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Three Drives</td>\n      <td>Greece 2000</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Sebastien Tellier</td>\n      <td>Kilometer</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Lonnie Gordon</td>\n      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio...</td>\n      <td>Sylvie</td>\n      <td>Cruz</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 11
     }
    ],
    "source": [
-    "## Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
     "table_2 = \"song_history_by_user_session\"\n",
     "\n",
-    "## create primary key from columns that are used for querying: sessionId and userId.  Add itemInSession to the composite\n",
-    "## primary key as clustering column for sorting the result.\n",
     "create_table(session, \n",
     "    table_name=table_2, \n",
     "    table_columns=[('sessionId','int'), ('userId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('firstName','text'), ('lastName','text')], \n",
@@ -557,8 +549,19 @@
    ]
   },
   {
+   "source": [
+    "#### Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "The primary key (PK) for this table is a composite key comprised of `song` and `userId` columns.  \n",
+    "`song` is used as PK because it is used for looking up the specific song.  `userId` column is added as the second key\n",
+    "to ensure uniqueness of each row in the resultset.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -586,15 +589,12 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>firstname</th>\n      <th>lastname</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Jacqueline</td>\n      <td>Lynch</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Tegan</td>\n      <td>Levine</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Sara</td>\n      <td>Johnson</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 12
     }
    ],
    "source": [
-    "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "table_3 = \"song_listened_by_users\"\n",
     "\n",
-    "## create primary key from column that is used for querying: song.  Add userId to make the composite\n",
-    "## primary key as clustering column to achieve uniqueness.\n",
     "create_table(session, \n",
     "    table_name=table_3, \n",
     "    table_columns=[('song','text'), ('userId','int'), ('firstName','text'), ('lastName','text')], \n",
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
