--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "# checking your current working directory\n",
+    "# checking current working directory\n",
     "print(os.getcwd())\n",
     "\n",
     "# Get your current folder and subfolder event data\n",
@@ -91,8 +91,8 @@
     "\n",
     "# Create a for loop to create a list of files and collect each filepath\n",
     "for root, dirs, files in os.walk(filepath):\n",
-    "    \n",
-    "# join the file path and roots with the subdirectories using glob\n",
+    "     \n",
+    "    # join the file path and roots with the subdirectories using glob\n",
     "    file_path_list = glob.glob(os.path.join(root,'*'))\n",
     "    "
    ]
@@ -140,12 +140,13 @@
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
-    "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "#print(full_data_rows_list)\n",
+    "# print(len(full_data_rows_list))\n",
+    "# uncomment the code below if you would like to check to see what the list of \n",
+    "# event data rows will look like\n",
+    "# print(full_data_rows_list)\n",
     "\n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
-    "# Apache Cassandra tables\n",
+    "# creating a smaller event data csv file called event_datafile_full csv \n",
+    "# that will be used to insert data into the Apache Cassandra tables\n",
     "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
     "\n",
     "with open(processed_events_file, 'w', encoding = 'utf8', newline='') as f:\n",
@@ -227,7 +228,7 @@
    "source": [
     "### Part II. Load processed data file and create tables for analyzing songs and users' listening sessions information. \n",
     "\n",
-    "#### Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "#### The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -247,8 +248,7 @@
   },
   {
    "source": [
-    "#### Define functions for creating table, populating table with datasource, run query and return results as panda dataframe, and dropping table.\n",
-    "The pandas factory is defined to be used as the row factory for the session"
+    "#### Define functions for creating table, populating table with datasource, run query and return results as panda dataframe, and dropping table.  The pandas factory is defined to be used as the row factory for the session"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -311,11 +311,12 @@
     "    \"\"\" \n",
     "        Populate the table with data extracted from global data source, df. \n",
     "        \n",
-    "        Notes: The global data source is used even for convenient, without the need \n",
+    "        Notes: The global data source is used for convenient, without the need \n",
     "        to open the same csv file and create the dataframe each time. \n",
     "        \n",
     "        If the data file is different for each table, it is recommended that the \n",
-    "        df variable should be loaded each time instead.\n",
+    "        the data file should be provided and data be loaded into new dataframe\n",
+    "        each time function is invoked.\n",
     "    \"\"\"\n",
     "\n",
     "    if session is None or table_name is None or table_columns is None:\n",
@@ -401,7 +402,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Keyspace\n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "        CREATE KEYSPACE IF NOT EXISTS udacity\n",
@@ -424,7 +424,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -521,6 +520,7 @@
     "* song: text\n",
     "* firstName: text\n",
     "* lastName: text\n",
+    "\n",
     "These fields are defined in the `table_columns` argument.\n",
     "\n",
     "The primary key of this table is a composite key including `userId`, `sessionId`, and the clustering key `itemInSession`. \n",
@@ -673,7 +673,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Drop the tables before closing out the sessions\n",
     "for table in [table_1, table_2, table_3]:\n",
     "    drop_table(session, table)\n"
    ]
