Add references for cassandra

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -697,7 +697,20 @@
   {
    "source": [
     "TODO:\n",
-    "performance improvement"
+    "bulk loading: https://cassandra.apache.org/doc/latest/operating/bulk_loading.html \n",
+    "\n",
+    "this is how to load large set of data\n",
+    "\n",
+    "Additional usefule reference for cassandra\n",
+    "\n",
+    "* https://shermandigital.com/blog/designing-a-cassandra-data-model/\n",
+    "* https://www.datastax.com/blog/allow-filtering-explained\n",
+    "* https://knowledge.udacity.com/questions/106815\n",
+    "* https://opensourceconnections.com/blog/2013/07/24/understanding-how-cql3-maps-to-cassandras-internal-data-structure/\n",
+    "* https://docs.datastax.com/en/dse/5.1/cql/cql/cql_using/whereClustering.html\n",
+    "\n",
+    "* http://millionsongdataset.com/pages/getting-dataset/\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
