--- a/cloud-data-warehouses/L3 Exercise 2 - IaC.ipynb
+++ b/cloud-data-warehouses/L3 Exercise 2 - IaC.ipynb
@@ -4,15 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "S3 is AWS object storage service.  it is the standard way for storing video, images, and data.\n",
+    "\n",
+    "boto3 is the python SDK\n",
+    "\n",
+    "in order for the python to have access to the S3, you'll need an IAM user with full permissions to S3.\n",
+    "the credentials is the account's access key and secret access key.\n",
+    "\n",
+    "the account used with Amazon SDK needs to have `programmatic access`.  And it is associated with the `AmazonS3FullAccess` policy.  Keep in mind the account with this policy has full control over S3, so protect the account well.\n",
+    "\n",
+    "This webpage is a good reference, https://realpython.com/python-boto3-aws-s3/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 2: Creating Redshift Cluster using the AWS python SDK \n",
     "## An example of Infrastructure-as-code"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import boto3\n",
